# snip

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  compile_commands.json  espresso  flake.nix  prek.toml
include/: cmd.hpp  file.hpp  gapbufline.hpp  message.hpp  model.hpp  program.hpp  state.hpp  terminal.hpp
include/core/: asyncqueue.hpp  ccqueue.hpp  eventloop.hpp  eventsource.hpp  ezpipe.hpp  threadpool.hpp
snip/: main.cpp
snip-core/: CMakeLists.txt  README.md  cc_queue.hpp  event_loop.cpp  event_loop.hpp  event_source.cpp  event_source.hpp  ezpipe.cpp  ezpipe.hpp  thread_pool.cpp  thread_pool.hpp
snip-editor/: CMakeLists.txt  README.md  editor.cpp  editor.hpp  motion.cpp  motion.hpp  state.hpp  view_model.hpp
snip-editor/text/: piece_table.cpp  piece_table.hpp  splitline.cpp  splitline.hpp
snip-file/: CMakeLists.txt  README.md  file.cpp  file.hpp
snip-render/: CMakeLists.txt  README.md  ansi.hpp  formatting.hpp  ir.hpp  renderer.cpp  renderer.hpp  styling.hpp  translator.cpp  translator.hpp
snip-runtime/: CMakeLists.txt  README.md  app.cpp  app.hpp  app_runtime.cpp  app_runtime.hpp  cmd.cpp  cmd.hpp  input.cpp  input.hpp  msg.hpp  runtime.cpp  runtime.hpp
snip-runtime/file/: file.cpp  file.hpp
snip-runtime/terminal/: terminal.cpp  terminal.hpp
snip-term/: CMakeLists.txt  README.md  terminal.cpp  terminal.hpp
snip-ui/: CMakeLists.txt  README.md  ansi.hpp  renderer.cpp  renderer.hpp
src/: CMakeLists.txt  EditorShortcuts.qml  EditorView.qml  EditorViewport.qml  FileTreeView.qml  Gutter.qml  Main.qml  TabView.qml  Theme.cpp  Theme.hpp  Theme.qml  commands.cpp  gapbufline.cpp  main.cpp  program.cpp  qml.qrc  runtime.cpp
src/core/: CMakeLists.txt  Hello.cpp  Hello.h  async_queue.hpp  cc_queue.hpp  event_loop.cpp  event_source.cpp  eventloop.cpp  eventsource.cpp  ezpipe.cpp  thread_pool.cpp  thread_pool.hpp  threadpool.cpp
src/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorController.cpp  EditorController.hpp  EditorModel.cpp  EditorModel.hpp  Gutter.cpp  Gutter.hpp  StrictScroll.cpp  StrictScroll.hpp  cmd.cpp  cmd.hpp  msg.hpp  snip.cpp  snip.hpp  state.hpp
src/editor/file/: file.cpp  file.hpp
src/editor/terminal/: terminal.cpp  terminal.hpp
src/editor/text/: gapbufline.cpp  gapbufline.hpp  splitline.cpp  splitline.hpp
src/event_loop/: cc_queue.hpp  event_loop.cpp  event_loop.hpp  event_source.cpp  event_source.hpp  ezpipe.cpp  ezpipe.hpp  thread_pool.hpp
src/filetree/: CMakeLists.txt  FileSortProxy.cpp  FileSortProxy.hpp  FileTree.cpp  FileTree.hpp  FileTreeController.cpp  FileTreeController.hpp  FileTreeModel.cpp  FileTreeModel.hpp
src/framework/: app.hpp  cmd.cpp  cmd.hpp  input.cpp  msg.hpp  state.hpp
src/framework/file/: file.hpp
src/framework/terminal/: ansi.hpp  render.hpp  terminal.cpp  terminal.hpp
src/io/: CMakeLists.txt  OpenFile.cpp  OpenFile.h
src/log/: CMakeLists.txt  Log.hpp
src/lsp/: CMakeLists.txt  JsonRpc.hpp  LspClient.cpp  LspClient.hpp  SemanticTokens.cpp  SemanticTokens.hpp
src/snip/: CMakeLists.txt  main.cpp  render.hpp  snip.cpp  snip.hpp  state.hpp
src/snip-core/: CMakeLists.txt  cc_queue.hpp  event_loop.cpp  event_loop.hpp  event_source.cpp  ezpipe.cpp  thread_pool.cpp  thread_pool.hpp
src/snip-editor/: CMakeLists.txt  editor.hpp
src/snip-runtime/: CMakeLists.txt  app.hpp  cmd.cpp  cmd.hpp  input.cpp  input.hpp  loop_wiring.cpp  loop_wiring.hpp  msg.hpp
src/snip-runtime/file/: file.cpp  file.hpp
src/snip-runtime/terminal/: ansi.hpp  terminal.cpp  terminal.hpp
src/snip-ui/: CMakeLists.txt  renderer.cpp  renderer.hpp
src/snip/text/: splitline.cpp  splitline.hpp
src/tabs/: CMakeLists.txt  TabData.hpp  TabManager.cpp  TabManager.hpp
src/text/: Buffer.cpp  Buffer.h  CMakeLists.txt  EditorScroll.cpp  EditorScroll.hpp  EditorView.cpp  EditorView.hpp  FileBuffer.cpp  FileBuffer.hpp
src/theme/: CMakeLists.txt  Theme.cpp  Theme.hpp
src/tree-sitter/: CMakeLists.txt  TreeSitter.cpp  TreeSitter.hpp
src/viewport/: CMakeLists.txt  StrictScrollViewport.cpp  StrictScrollViewport.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  hello_test.cpp
tests/io/: CMakeLists.txt  open_file_test.cpp
tests/text/: CMakeLists.txt  buffer_test.cpp
